// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with address but without contact 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Regular",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "fontFamily": "Hind-Light",
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    #0x0000000000000000000000000000000000007E57
  </Text>
</View>
`;

exports[`Avatar renders correctly with contact 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "mockThumbpath",
          }
        }
        style={
          Array [
            Object {
              "alignSelf": "center",
              "margin": "auto",
            },
            Object {
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
          ]
        }
      />
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginRight": 4,
          },
        ]
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "color": "#9CA4A9",
          },
        ]
      }
    >
      +1 (415) 555-6666
    </Text>
  </View>
</View>
`;

exports[`Avatar renders correctly with number but without contact 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "marginRight": 4,
          },
        ]
      }
    >
      🇺🇸
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          },
          Object {
            "color": "#9CA4A9",
          },
        ]
      }
    >
      +1 (415) 555-6666
    </Text>
  </View>
</View>
`;

exports[`Avatar renders correctly without contact and number 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#7AD6FE",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
            },
            Object {
              "fontSize": 20,
            },
          ]
        }
      >
        M
      </Text>
    </View>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        },
        Object {
          "marginHorizontal": 20,
          "paddingTop": 6,
          "textAlign": "center",
        },
      ]
    }
  >
    mockName
  </Text>
</View>
`;
